<resources>
    <!-- name of the app -->
    <string name="app_name">Inventory App</string>

    <!-- shown label for the catalog -->
    <string name="catalog_label">Book Inventory</string>

    <!-- shown label for the details page -->
    <string name="details_label">Book Details</string>

    <!-- message for an empty inventory -->
    <string name="empty_inventory">The inventory is empty...</string>
    <string name="add_some_books">Get started by clicking on the + sign \n or add some dummy data!</string>

    <!-- menu buttons [CHAR LIMIT=20]-->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!-- Editor Activity -->
    <string name="hint_book_name">Book Name</string>
    <string name="hint_price">Price</string>
    <string name="category_in_stock">In Stock:</string>
    <string name="hint_quantity">Quantity</string>
    <string name="category_supplier">Supplier:</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>

    <string name="plus">+</string>
    <string name="minus">—</string>

    <!-- Sale Button -->
    <string name="sale">Sale</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Delete confirmation dialog -->
    <string name="delete_all_dialog_msg">Delete all books?</string>
    <string name="delete_one_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Unsaved changes dialog -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>


    <!-- toast messages-->
    <string name="delete_all_successful">All books deleted!</string>
    <string name="delete_all_not_successful">No books to delete or error deleting books!</string>
    <string name="delete_book_successful">Book deleted!</string>
    <string name="delete_book_not_successful">Error with deleting book!</string>
    <string name="no_valid_book_name">Book requires a valid name!</string>
    <string name="no_valid_price">Please enter a valid price!</string>
    <string name="no_valid_quantity">Please enter a valid quantity!</string>
    <string name="no_valid_supplier_name">Supplier requires a valid name!</string>
    <string name="no_valid_supplier_phone">Supplier requires a valid phone number!</string>
    <string name="insert_book_failed">Error with saving book!</string>
    <string name="insert_book_successful">Book saved!</string>
    <string name="update_book_failed">Error with updating book!</string>
    <string name="update_book_successful">Book updated!</string>


</resources>
