<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_book_name"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            tools:text="The DaVinci Code" />

        <TextView
            android:id="@+id/details_price"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            tools:text="12.99 €" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_in_stock" />

            <TextView
                android:id="@+id/details_quantity"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                tools:text="120" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editor_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/editor_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>